testsuite/tests/parser/should_fail/pfail054.alan
ForwardDeclaration() : proc
  foo(x : int) : proc;
  foo2() : proc
  { foo(5); }
{}
